# REMEMBRain

./: ARCHITECTURE_SUMMARY.md  BUILD.md  Cargo.toml  MC_INTEGRATION_PLAN.md  ORIGINS_AND_INSPIRATIONS.md  README.md  RISC_OSINT_ARCHITECTURE_REFLECTION.md  RISC_OSINT_AUDIT_IMPLEMENTATION.md  build.rs
.github/workflows/: ci.yml
crates/clone-tracker/: Cargo.toml
crates/clone-tracker/src/: lib.rs
crates/cognitive/: Cargo.toml
crates/cognitive/src/: candle_embed.rs  lib.rs
crates/core/src/: lib.rs  palace.rs  typed_memory.rs  types.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: api.rs  auto_pruning.rs  builder.rs  compaction.rs  config.rs  context_stack.rs  http_server.rs  lib.rs  logging.rs  metrics.rs  palace_router.rs  providers.rs  router.rs  transaction.rs
crates/graph/: Cargo.toml
crates/graph/src/: entity_resolution.rs  lib.rs  relationship.rs
crates/ingest-opencode/: Cargo.toml
crates/ingest-opencode/src/: config.rs  db.rs  lib.rs  transform.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: lib.rs  sharding.rs  store.rs
crates/storage/: Cargo.toml
crates/storage/src/: backup.rs  lib.rs  read_replica.rs
crates/temporal/src/: store.rs
evaluation/: DEVELOPMENT_STRATEGY.md  RIGOROUS_EVALUATION_REPORT.md
