[package]
name = "rememnemosyne-clone-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", optional = true, features = ["json", "blocking"] }

[features]
default = []
remote-tracking = ["reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
