[package]
name = "rememnemosyne-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rememnemosyne-core = { path = "../core" }
rememnemosyne-semantic = { path = "../semantic" }
rememnemosyne-episodic = { path = "../episodic" }
rememnemosyne-graph = { path = "../graph" }
rememnemosyne-temporal = { path = "../temporal" }
rememnemosyne-cognitive = { path = "../cognitive" }
rememnemosyne-storage = { path = "../storage" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
regex = "1"
prometheus-client = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["sled-storage", "archive"]
persistence = ["rememnemosyne-storage/persistence"]
sled-storage = ["rememnemosyne-storage/sled-storage"]
archive = ["rememnemosyne-storage/archive"]
candle-embeddings = ["rememnemosyne-cognitive/candle-embeddings"]
entity-resolution = ["rememnemosyne-graph/entity-resolution"]
backup-export = ["rememnemosyne-storage/backup-export"]
metrics = ["dep:prometheus-client"]
http-server = ["dep:axum", "dep:tower", "dep:tower-http"]
config-file = ["dep:toml"]
structured-logging = ["dep:tracing-subscriber"]
sharding = ["rememnemosyne-semantic/sharding"]
read-replicas = ["rememnemosyne-storage/read-replicas"]
compaction = []
auto-pruning = []
clone-tracking = ["dep:rememnemosyne-clone-tracker"]

[build-dependencies]
rememnemosyne-clone-tracker = { path = "../clone-tracker", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "engine_benchmark"
harness = false
