[package]
name = "rememnemosyne-ingest-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ingest opencode session history into RemeMnemosyne semantic memory"

[dependencies]
rememnemosyne-engine = { path = "../engine", default-features = false }
rememnemosyne-core = { path = "../core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }